# webhook-relay

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
config/: README.md  collector.yml  forwarder.yml
examples/: custom-payload.json  github-payload.json
src/webhook_relay/: __init__.py
src/webhook_relay/collector/: __init__.py  app.py  routes.py  server.py
src/webhook_relay/common/: __init__.py  config.py  metrics.py  models.py  queue.py
src/webhook_relay/forwarder/: __init__.py  app.py  client.py
tests/: conftest.py
tests/unit/collector/: test_routes.py  test_server.py
tests/unit/common/: test_config.py  test_metrics.py  test_models.py  test_queue.py
tests/unit/forwarder/: test_app.py  test_client.py
